pielang/src/snapshots/pielang__test__tll_1_(check-same U (Pair Nat Atom) (Pair Atom Nat)).snap
---
source: pielang/src/test.rs
description: (check-same U (Pair Nat Atom) (Pair Atom Nat))
expression: output
---
Error: The expressions (Pair Nat Atom) and (Pair Atom Nat) are not the same U
