pielang/src/snapshots/pielang__test__tll_1_(check-same U Atom Nat).snap
---
source: pielang/src/test.rs
description: (check-same U Atom Nat)
expression: output
---
error: The expressions Atom and Nat are not the same U
