pielang/src/snapshots/pielang__test__tll_1_(iter-Nat 0 3 (lambda (smaller) (add1 smaller))).snap
---
source: pielang/src/test.rs
description: (iter-Nat 0 3 (lambda (smaller) (add1 smaller)))
expression: output
---
type: Nat
expr: 3
