pielang/src/snapshots/pielang__test__tll_1_(the (Pair Atom Atom) (cons 'ratatouille 'baguette)).snap
---
source: pielang/src/test.rs
description: "(the (Pair Atom Atom) (cons 'ratatouille 'baguette))"
expression: output
---
type: (Pair Atom Atom)
expr: (cons 'ratatouille 'baguette)
