pielang/src/snapshots/pielang__test__tll_1_(the (Pair Atom Atom) (cons 'ratatouille 0)).snap
---
source: pielang/src/test.rs
description: "(the (Pair Atom Atom) (cons 'ratatouille 0))"
expression: output
---
error: Expected Atom but given Nat
