pielang/src/snapshots/pielang__test__tll_1_(the (Pair Atom Nat) (cons 'ratatouille 0)).snap
---
source: pielang/src/test.rs
description: "(the (Pair Atom Nat) (cons 'ratatouille 0))"
expression: output
---
type: (Pair Atom Nat)
expr: (cons 'ratatouille 0)
