pielang/src/snapshots/pielang__test__tll_1_(the (Pair U U) (cons Atom Nat)).snap
---
source: pielang/src/test.rs
description: (the (Pair U U) (cons Atom Nat))
expression: output
---
type: (Pair U U)
expr: (cons Atom Nat)
