pielang/src/snapshots/pielang__test__tll_1_(the U (Pair Atom Atom)).snap
---
source: src/test.rs
description: (the U (Pair Atom Atom))
expression: output
---
type: U
expr: (Pair Atom Atom)
