pielang/src/snapshots/pielang__test__tll_1_(which-Nat 4 'naught (λ (n) 'more)).snap
---
source: pielang/src/test.rs
description: "(which-Nat 4 'naught (λ (n) 'more))"
expression: output
---
type: Atom
expr: 'more
